Fixed link flickering on hover in header.

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -10,7 +10,6 @@ html {
 a {
 	text-decoration: none;
 	color: $link-color;
-	border-bottom: 1px solid transparent;
 
 	&:hover {
 		border-bottom: 1px solid;
