--- a/assets/stylesheets/sections/posts.scss
+++ b/assets/stylesheets/sections/posts.scss
@@ -112,6 +112,7 @@ header {
 
 	& h1 a {
 		color: $title-color;
+		border-bottom: 1px solid transparent;
 
 		&:hover {
 			color: $link-color;
